<resources>
    <string name="app_name">Rekomendasi Buku</string>
    <string name="book_recomendation">Book Recomendation</string>
    <string name="aplikasi_rekomendasi_buku">Aplikasi Rekomendasi Buku</string>
    <string name="perpustakaan_universitas_mulawarman">Perpustakaan Universitas Mulawarman</string>
    <string name="daftar">Daftar</string>
    <string name="masuk">Masuk</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="nim">NIM</string>
    <string name="home">Home</string>
    <string name="buku">Buku</string>
    <string name="rekomendasi">Rekomendasi</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lorem">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="lorem_sedikit">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to</string>
    <string name="angkatan">Angkatan</string>
    <string name="password_lama">Password Lama</string>
    <string name="password_baru">Password Baru</string>
    <string name="fakultas">Fakultas</string>

    <string-array name="list_fakultas">
        <item>Ilmu Budaya</item>
        <item>Farmasi</item>
        <item>Kesehatan Masyarakat</item>
        <item>Kedokteran</item>
        <item>Teknik</item>
        <item>Hukum</item>
        <item>Matematika dan Ilmu Pengetahuan Alam</item>
        <item>Perikanan dan Ilmu Kelautan</item>
        <item>Keguruan dan Ilmu Pendidikan</item>
        <item>Kehutanan</item>
        <item>Pertanian</item>
        <item>Ilmu Sosial dan Ilmu Politik</item>
        <item>Ekonomi</item>
    </string-array>
</resources>
